// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tables adjacent tables 1`] = `
{
  "blocks": [
    {
      "attributes": {
        "columns": [
          {
            "name": "name(mock_uid_0-mock_uid_1)",
            "plaintextName": "name",
            "slice": "M00000000",
            "textAlign": "left",
          },
          {
            "name": "age(mock_uid_0-mock_uid_2)",
            "plaintextName": "age",
            "slice": "M00000001",
            "textAlign": "right",
          },
          {
            "name": "job(mock_uid_0-mock_uid_3)",
            "plaintextName": "job",
            "slice": "M00000002",
          },
          {
            "name": "notes(mock_uid_0-mock_uid_4)",
            "plaintextName": "notes",
            "slice": "M00000003",
            "textAlign": "center",
          },
        ],
        "dataSet": "B00000001",
        "showColumnHeaders": true,
      },
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "20",
              "slice": "M00000007",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "fighter",
              "slice": "M00000008",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "laios",
              "slice": "M00000006",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000009",
            },
          },
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "500",
              "slice": "M0000000d",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "mage",
              "slice": "M0000000e",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "marcille",
              "slice": "M0000000c",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M0000000f",
            },
          },
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "18",
              "slice": "M00000011",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "healer",
              "slice": "M00000012",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "falin",
              "slice": "M00000010",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000013",
            },
          },
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "29",
              "slice": "M00000016",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "thief",
              "slice": "M00000017",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "chilchuk",
              "slice": "M00000015",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000018",
            },
          },
        ],
        "schema": {
          "age(mock_uid_0-mock_uid_2)": "rich_text",
          "job(mock_uid_0-mock_uid_3)": "rich_text",
          "name(mock_uid_0-mock_uid_1)": "rich_text",
          "notes(mock_uid_0-mock_uid_4)": "rich_text",
        },
      },
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000003",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000004",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000006",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000009",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000011",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000013",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000014",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {
        "columns": [
          {
            "name": "name(mock_uid_5-mock_uid_6)",
            "plaintextName": "name",
            "slice": "M00000019",
            "textAlign": "left",
          },
          {
            "name": "age(mock_uid_5-mock_uid_7)",
            "plaintextName": "age",
            "slice": "M0000001a",
            "textAlign": "right",
          },
          {
            "name": "job(mock_uid_5-mock_uid_8)",
            "plaintextName": "job",
            "slice": "M0000001b",
          },
          {
            "name": "notes(mock_uid_5-mock_uid_9)",
            "plaintextName": "notes",
            "slice": "M0000001c",
            "textAlign": "center",
          },
        ],
        "dataSet": "B00000017",
        "showColumnHeaders": true,
      },
      "id": "B00000016",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age(mock_uid_5-mock_uid_7)": {
              "jsonValue": "20",
              "slice": "M00000020",
            },
            "job(mock_uid_5-mock_uid_8)": {
              "jsonValue": "fighter",
              "slice": "M00000021",
            },
            "name(mock_uid_5-mock_uid_6)": {
              "jsonValue": "laios",
              "slice": "M0000001f",
            },
            "notes(mock_uid_5-mock_uid_9)": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000022",
            },
          },
          {
            "age(mock_uid_5-mock_uid_7)": {
              "jsonValue": "500",
              "slice": "M00000026",
            },
            "job(mock_uid_5-mock_uid_8)": {
              "jsonValue": "mage",
              "slice": "M00000027",
            },
            "name(mock_uid_5-mock_uid_6)": {
              "jsonValue": "marcille",
              "slice": "M00000025",
            },
            "notes(mock_uid_5-mock_uid_9)": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M00000028",
            },
          },
          {
            "age(mock_uid_5-mock_uid_7)": {
              "jsonValue": "18",
              "slice": "M0000002a",
            },
            "job(mock_uid_5-mock_uid_8)": {
              "jsonValue": "healer",
              "slice": "M0000002b",
            },
            "name(mock_uid_5-mock_uid_6)": {
              "jsonValue": "falin",
              "slice": "M00000029",
            },
            "notes(mock_uid_5-mock_uid_9)": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M0000002c",
            },
          },
          {
            "age(mock_uid_5-mock_uid_7)": {
              "jsonValue": "29",
              "slice": "M0000002f",
            },
            "job(mock_uid_5-mock_uid_8)": {
              "jsonValue": "thief",
              "slice": "M00000030",
            },
            "name(mock_uid_5-mock_uid_6)": {
              "jsonValue": "chilchuk",
              "slice": "M0000002e",
            },
            "notes(mock_uid_5-mock_uid_9)": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000031",
            },
          },
        ],
        "schema": {
          "age(mock_uid_5-mock_uid_7)": "rich_text",
          "job(mock_uid_5-mock_uid_8)": "rich_text",
          "name(mock_uid_5-mock_uid_6)": "rich_text",
          "notes(mock_uid_5-mock_uid_9)": "rich_text",
        },
      },
      "id": "B00000017",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000018",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000019",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000001f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000020",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000021",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000022",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000023",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000024",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000025",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000026",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000027",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000028",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000029",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000002a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000002b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
  ],
  "marks": [
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000000",
      "range": "(2..7]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000001",
      "range": "(7..11]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000002",
      "range": "(11..15]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000003",
      "range": "(15..21]",
      "type": "slice",
    },
    {
      "attributes": {
        "url": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M00000004",
      "range": "(16..21)",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M00000005",
      "range": "(16..21]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000006",
      "range": "(22..27]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000007",
      "range": "(27..30]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000008",
      "range": "(30..38]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000009",
      "range": "(38..97]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000000a",
      "range": "(69..82]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M0000000b",
      "range": "(76..82]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000c",
      "range": "(98..106]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000d",
      "range": "(106..110]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000e",
      "range": "(110..115]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000f",
      "range": "(115..237]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000010",
      "range": "(238..243]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000011",
      "range": "(243..246]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000012",
      "range": "(246..253]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000013",
      "range": "(253..396]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000014",
      "range": "(258..263]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000015",
      "range": "(397..405]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000016",
      "range": "(405..408]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000017",
      "range": "(408..414]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000018",
      "range": "(414..556]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000019",
      "range": "(558..563]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001a",
      "range": "(563..567]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001b",
      "range": "(567..571]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001c",
      "range": "(571..577]",
      "type": "slice",
    },
    {
      "attributes": {
        "url": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M0000001d",
      "range": "(572..577)",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M0000001e",
      "range": "(572..577]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000001f",
      "range": "(578..583]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000020",
      "range": "(583..586]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000021",
      "range": "(586..594]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000022",
      "range": "(594..653]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000023",
      "range": "(625..638]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M00000024",
      "range": "(632..638]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000025",
      "range": "(654..662]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000026",
      "range": "(662..666]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000027",
      "range": "(666..671]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000028",
      "range": "(671..793]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000029",
      "range": "(794..799]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002a",
      "range": "(799..802]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002b",
      "range": "(802..809]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002c",
      "range": "(809..952]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000002d",
      "range": "(814..819]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002e",
      "range": "(953..961]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M0000002f",
      "range": "(961..964]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000030",
      "range": "(964..970]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000017",
        ],
      },
      "id": "M00000031",
      "range": "(970..1112]",
      "type": "slice",
    },
  ],
  "text": "￼￼￼name￼age￼job￼notes￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people￼￼￼name￼age￼job￼notes￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`tables converting 1`] = `
{
  "blocks": [
    {
      "attributes": {
        "columns": [
          {
            "name": "name(mock_uid_0-mock_uid_1)",
            "plaintextName": "name",
            "slice": "M00000000",
            "textAlign": "left",
          },
          {
            "name": "age(mock_uid_0-mock_uid_2)",
            "plaintextName": "age",
            "slice": "M00000001",
            "textAlign": "right",
          },
          {
            "name": "job(mock_uid_0-mock_uid_3)",
            "plaintextName": "job",
            "slice": "M00000002",
          },
          {
            "name": "notes(mock_uid_0-mock_uid_4)",
            "plaintextName": "notes",
            "slice": "M00000003",
            "textAlign": "center",
          },
        ],
        "dataSet": "B00000001",
        "showColumnHeaders": true,
      },
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {
        "records": [
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "20",
              "slice": "M00000007",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "fighter",
              "slice": "M00000008",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "laios",
              "slice": "M00000006",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "ちょっと変な but earnest person. He really really likes monsters",
              "slice": "M00000009",
            },
          },
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "500",
              "slice": "M0000000d",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "mage",
              "slice": "M0000000e",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "marcille",
              "slice": "M0000000c",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...",
              "slice": "M0000000f",
            },
          },
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "18",
              "slice": "M00000011",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "healer",
              "slice": "M00000012",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "falin",
              "slice": "M00000010",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers",
              "slice": "M00000013",
            },
          },
          {
            "age(mock_uid_0-mock_uid_2)": {
              "jsonValue": "29",
              "slice": "M00000016",
            },
            "job(mock_uid_0-mock_uid_3)": {
              "jsonValue": "thief",
              "slice": "M00000017",
            },
            "name(mock_uid_0-mock_uid_1)": {
              "jsonValue": "chilchuk",
              "slice": "M00000015",
            },
            "notes(mock_uid_0-mock_uid_4)": {
              "jsonValue": "Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
              "slice": "M00000018",
            },
          },
        ],
        "schema": {
          "age(mock_uid_0-mock_uid_2)": "rich_text",
          "job(mock_uid_0-mock_uid_3)": "rich_text",
          "name(mock_uid_0-mock_uid_1)": "rich_text",
          "notes(mock_uid_0-mock_uid_4)": "rich_text",
        },
      },
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "data-set",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000003",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000004",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000006",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000009",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000a",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000c",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000e",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B0000000f",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000011",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000013",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000014",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "data-set",
      ],
      "selfClosing": false,
      "type": "text",
    },
  ],
  "marks": [
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000000",
      "range": "(2..7]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000001",
      "range": "(7..11]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000002",
      "range": "(11..15]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000003",
      "range": "(15..21]",
      "type": "slice",
    },
    {
      "attributes": {
        "url": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M00000004",
      "range": "(16..21)",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M00000005",
      "range": "(16..21]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000006",
      "range": "(22..27]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000007",
      "range": "(27..30]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000008",
      "range": "(30..38]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000009",
      "range": "(38..97]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M0000000a",
      "range": "(69..82]",
      "type": "italic",
    },
    {
      "attributes": {},
      "id": "M0000000b",
      "range": "(76..82]",
      "type": "bold",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000c",
      "range": "(98..106]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000d",
      "range": "(106..110]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000e",
      "range": "(110..115]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M0000000f",
      "range": "(115..237]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000010",
      "range": "(238..243]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000011",
      "range": "(243..246]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000012",
      "range": "(246..253]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000013",
      "range": "(253..396]",
      "type": "slice",
    },
    {
      "attributes": {},
      "id": "M00000014",
      "range": "(258..263]",
      "type": "italic",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000015",
      "range": "(397..405]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000016",
      "range": "(405..408]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000017",
      "range": "(408..414]",
      "type": "slice",
    },
    {
      "attributes": {
        "refs": [
          "B00000001",
        ],
      },
      "id": "M00000018",
      "range": "(414..556]",
      "type": "slice",
    },
  ],
  "text": "￼￼￼name￼age￼job￼notes￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;

exports[`tables parsing 1`] = `
{
  "blocks": [
    {
      "attributes": {},
      "id": "B00000000",
      "parents": [],
      "selfClosing": false,
      "type": "table",
    },
    {
      "attributes": {},
      "id": "B00000001",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "thead",
    },
    {
      "attributes": {},
      "id": "B00000002",
      "parents": [
        "table",
        "thead",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000003",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000004",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {},
      "id": "B00000005",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000006",
      "parents": [
        "table",
        "thead",
        "tr",
      ],
      "selfClosing": false,
      "type": "th",
    },
    {
      "attributes": {},
      "id": "B00000007",
      "parents": [
        "table",
      ],
      "selfClosing": false,
      "type": "tbody",
    },
    {
      "attributes": {},
      "id": "B00000008",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000009",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B0000000a",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000000b",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B0000000c",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000000d",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B0000000e",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B0000000f",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000010",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000011",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000012",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000013",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000014",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000015",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B00000016",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B00000017",
      "parents": [
        "table",
        "tbody",
      ],
      "selfClosing": false,
      "type": "tr",
    },
    {
      "attributes": {
        "style": "text-align:left",
      },
      "id": "B00000018",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:right",
      },
      "id": "B00000019",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {},
      "id": "B0000001a",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
    {
      "attributes": {
        "style": "text-align:center",
      },
      "id": "B0000001b",
      "parents": [
        "table",
        "tbody",
        "tr",
      ],
      "selfClosing": false,
      "type": "td",
    },
  ],
  "marks": [
    {
      "attributes": {},
      "id": "M00000000",
      "range": "(17..22]",
      "type": "em",
    },
    {
      "attributes": {
        "href": "https://ja.wikipedia.org/wiki/%E3%83%80%E3%83%B3%E3%82%B8%E3%83%A7%E3%83%B3%E9%A3%AF",
      },
      "id": "M00000001",
      "range": "(17..22]",
      "type": "link",
    },
    {
      "attributes": {},
      "id": "M00000002",
      "range": "(72..85]",
      "type": "em",
    },
    {
      "attributes": {},
      "id": "M00000003",
      "range": "(79..85]",
      "type": "strong",
    },
    {
      "attributes": {},
      "id": "M00000004",
      "range": "(263..268]",
      "type": "em",
    },
  ],
  "text": "￼￼￼￼name￼age￼job￼notes￼￼￼laios￼20￼fighter￼ちょっと変な but earnest person. He really really likes monsters￼￼marcille￼500￼mage￼Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...￼￼falin￼18￼healer￼She seems nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers￼￼chilchuk￼29￼thief￼Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people",
}
`;
